Moved long proof to appendix

--- a/alantree.bib
+++ b/alantree.bib
@@ -132,3 +132,10 @@ note="available in \url{http://www2.math.uu.se/~svante/papers/sjN14.pdf}"
   number    = {UU-CS-2004-042} 
 }
 
+@Misc{balister.bollobas.ea:first-passage,
+  author    = {P. N. Balister and B. Bollob{\'a}s and A. M. Frieze and O. M. Riordan},
+  title     = {The first-passage diameter of the cube},
+  note      = {Unpublished manuscript},
+  year      = {2017}
+}
+
