--- a/alantree.bib
+++ b/alantree.bib
@@ -125,7 +125,7 @@ note="available in \url{http://www2.math.uu.se/~svante/papers/sjN14.pdf}"
 }
 
 @TechReport{wolle.koster.ea:note,
-  author    = {T Wolle and A. M. . C. A. Koster adn H. L. Bodlaender},
+  author    = {T Wolle and A. M. C. A. Koster and H. L. Bodlaender},
   title     = {A Note on Contraction Degeneracy},
   institution = {University of Utrecht},
   year      = {2004},
